--- a/platform_code/home/templates/home/login.html
+++ b/platform_code/home/templates/home/login.html
@@ -21,7 +21,7 @@
     {% endif %}
 
 
-    <form class="form" id="user_login_form" method='post' role="form">
+    <form class="form" id="user_login_page_form" method='post' role="form">
         <div class="header">
             <h1 class="title h1-margin-no-breadcrumbs">{% trans "Login" %}</h1>
 
