--- a/platform_code/assessment/templates/assessment/organisation/member/edit-role-member.html
+++ b/platform_code/assessment/templates/assessment/organisation/member/edit-role-member.html
@@ -51,7 +51,8 @@
         </div>
         <div class="modal-footer self-center">
             <button class="btn btn-primary adapted-button-size-250 margin-auto margin-10"
-                    onclick="editRoleMember('editRoleMember{{member.id}}', '{{member.id}}', false)" type="submit">
+                    onclick="editRoleMember('editRoleMember{{member.id}}', '{{member.id}}', false)"
+                    type="button">
                 {% trans "Change" %}
             </button>
             <button class="btn btn-danger adapted-button-size-250 margin-auto right-button" data-dismiss="modal"
