--- a/platform_code/assessment/templates/assessment/organisation/member/edit-role-pending-member.html
+++ b/platform_code/assessment/templates/assessment/organisation/member/edit-role-pending-member.html
@@ -49,7 +49,7 @@
         <div class="modal-footer self-center">
             <button class="btn btn-primary adapted-button-size-250 margin-auto margin-10"
                     onclick="editRoleMember('editRoleInvitation{{pending_member.id}}', '{{pending_member.id}}', true)"
-                    type="submit">
+                    type="button">
                 {% trans "Change" %}
             </button>
             <button class="btn btn-danger adapted-button-size-250 margin-auto right-button" data-dismiss="modal"
