--- a/platform_code/home/templates/home/settings-password.html
+++ b/platform_code/home/templates/home/settings-password.html
@@ -27,14 +27,13 @@
                 {% endfor %}
                 <div class="center-smartphone">
                     <button class="btn btn-primary" onclick="submitUserSettingsPasswordForm('ChangePassword')"
-                            type="submit">{% trans "Modify" %}
+                            type="button">{% trans "Modify" %}
                     </button>
                 </div>
             </form>
         </div>
     </div>
 
-    <div id="confirmationChangePassword"></div>
+    <div id="messagePassword" class="alert display-none"></div>
 
-    <div id="error_messages_password"></div>
 </div>
