--- a/platform_code/assessment/templates/assessment/organisation/member/remove-member.html
+++ b/platform_code/assessment/templates/assessment/organisation/member/remove-member.html
@@ -25,7 +25,7 @@
             {% csrf_token %}
             <button class="btn btn-primary adapted-button-size-250 margin-auto"
                     onclick="removeMember('removeMember{{member.id}}', '{{member.id}}', false)"
-                    type="submit">
+                    type="button">
                 {% trans 'Yes' %}
             </button>
             <button class="btn btn-danger adapted-button-size-250 margin-auto right-button smartphone-margin-top"
