--- a/platform_code/assessment/templates/assessment/element-feedback.html
+++ b/platform_code/assessment/templates/assessment/element-feedback.html
@@ -5,8 +5,7 @@
 <!-- Feedback for each evaluation element -->
 
 <a class="feedback" data-target="#modal-feedback-element{{element.id}}" data-toggle="modal"
-   href="#" title="{% trans 'You can give a feedback on this evaluation element to the Substra team.' %}"
-   type="button">
+   href="#" title="{% trans 'You can give a feedback on this evaluation element to the Substra team.' %}">
     <span class="remove-smaller-380">{% trans "Give a feedback" %}</span>
 <!--    <span class="remove-larger-380">{% trans "Feedback" %}</span>-->
     <i class="fa fa-comment-o remove-larger-380 font-25" aria-hidden="true"></i>
