--- a/platform_code/assessment/templates/assessment/section-feedback.html
+++ b/platform_code/assessment/templates/assessment/section-feedback.html
@@ -5,7 +5,7 @@
 <!-- Feedback for each evaluation section -->
 
 <a class="feedback" data-target="#modal-feedback-section{{section.id}}" data-toggle="modal"
-   href="#" type="button">{% trans "Give a feedback" %}</a>
+   href="#">{% trans "Give a feedback" %}</a>
 
 <!-- The Modal create feedback -->
 
