--- a/platform_code/templates/base-evaluation.html
+++ b/platform_code/templates/base-evaluation.html
@@ -122,10 +122,12 @@
             <p class="margin-auto center text-partnership">{% trans "With the support of " %}
             <a href="https://dataforgood.fr/"
                title="https://dataforgood.fr/"
-               class="link-with-border" >Data for Good.</a>
+               class="link-with-border"
+               target="_blank">Data for Good.</a>
             </p>
             <a href="https://dataforgood.fr/"
-               title="https://dataforgood.fr/">
+               title="https://dataforgood.fr/"
+               target="_blank">
                 <img alt="Data for Good logo"
                  class="img-fluid d-block mx-auto logo-d4g margin-10"
                  src="{% static 'image/logo-d4g-white.png' %}">
