--- a/platform_code/assessment/static/css/section-card.css
+++ b/platform_code/assessment/static/css/section-card.css
@@ -50,7 +50,8 @@ h5.card-title-section {
   margin-top: 30px;
   margin-bottom: 20px;
   width: 100%;
-  height: 8.5em;
+  min-height: 8.5em;
+  line-height: 1.25em;
   display: block;
   overflow: hidden;
   text-overflow: ellipsis;
