--- a/platform_code/assessment/templates/assessment/organisation/organisation.html
+++ b/platform_code/assessment/templates/assessment/organisation/organisation.html
@@ -16,7 +16,9 @@
 {% if messages %}
 <ul class="messages margin-3em">
     {% for message in messages %}
-    <li class="alert alert-{{ message.tags }}" >{{ message }}</li>
+    <li class="alert alert-{{ message.tags }} overflow-auto" >
+        <div>{{ message }}</div>
+    </li>
     {% endfor %}
 </ul>
 {% endif %}
@@ -44,7 +46,7 @@
     <div class="data-nav-pills">
         <div class="tab-content" id="PillProfileContent">
 
-            <div aria-labelledby="tab-eval" class="tab-pane active large-array"
+            <div aria-labelledby="tab-eval" class="tab-pane active large-array-large-screen margin-left-large-screen"
                  id="content-eval" role="tabpanel">
                 {% include "assessment/organisation/orga-evaluation.html" %}
 
@@ -70,14 +72,14 @@
     {% if organisation|get_role:user == "admin" or organisation|get_role:user == "editor"%}
     {% if last_version %}
     <!-- Button to Open the Modal -->
-    <button class="btn btn-primary float-right same-size-280 margin-auto smaller-tablet-margin-10"
+    <button class="btn btn-primary float-right same-size-280 margin-auto margin-10-new-eval-button"
             data-target="#modal-create-eval"
             data-toggle="modal"
             type="button">
         {% trans "Start a new evaluation" %}
     </button>
     {% else %}
-    <button class="btn btn-primary float-right same-size-280 margin-auto smaller-tablet-margin-10"
+    <button class="btn btn-primary float-right same-size-280 margin-auto margin-10-new-eval-button"
             disabled
             title="{% trans 'We are sorry, there is no assessment available yet.' %}"
             type="button">
@@ -85,7 +87,7 @@
     </button>
     {% endif %}
     {% else %}
-    <button class="btn btn-primary float-right same-size-280 margin-auto smaller-tablet-margin-10"
+    <button class="btn btn-primary float-right same-size-280 margin-auto margin-10-new-eval-button"
             disabled
             title="{% trans 'You do not have the right to do this action' %}"
             type="button">
