--- a/platform_code/home/templates/home/login-modal.html
+++ b/platform_code/home/templates/home/login-modal.html
@@ -31,7 +31,7 @@
                     </div>
                     <div class="margin-10">
                         <input name="next" type="hidden" value="{{ next }}"/>
-                        <a class="btn btn-blue adapted-button-size-250" href="{% url 'home:signup' %}" type="button"
+                        <a class="btn btn-blue adapted-button-size-250" href="{% url 'home:signup' %}"
                         >{% trans "I haven't an account" %}</a>
                     </div>
 
