--- a/platform_code/home/templates/home/login.html
+++ b/platform_code/home/templates/home/login.html
@@ -61,7 +61,7 @@
                 <div class="margin-10">
                     <input name="next" type="hidden" value="{{ next }}"/>
                     <a class="btn btn-blue adapted-button-size-250" href="{% url 'home:signup' %}"
-                       type="button">{% trans "I haven't an account" %}</a>
+                       >{% trans "I haven't an account" %}</a>
                 </div>
             </div>
 
