--- a/platform_code/home/templates/home/profile-organisation-creation.html
+++ b/platform_code/home/templates/home/profile-organisation-creation.html
@@ -7,7 +7,7 @@
 <h1>{% trans "Organisation creation" %}</h1>
 
 {% if messages %}
-    <ul class="messages">
+    <ul class="messages center margin-20">
         {% for message in messages %}
             <li class="alert alert-{{ message.tags }}" >{{ message }}</li>
         {% endfor %}
