--- a/platform_code/assessment/templates/assessment/organisation/member/add-member-email.html
+++ b/platform_code/assessment/templates/assessment/organisation/member/add-member-email.html
@@ -1,6 +1,5 @@
-{% load i18n %}
-{% autoescape off %}
-Hello,
+{% load i18n %}{% autoescape off %}
+{% trans "Dear Sir/Madam," %}
 {% trans "The user" %} {{user.email}} {% trans "invite you to join his organisation on the Substra platform. To do this, you must create an account with the link below." %}
 
 {{ protocol }}://{{ domain }}{% url 'home:signup' %}
