--- a/platform_code/home/templates/home/registration/password_reset_email.html
+++ b/platform_code/home/templates/home/registration/password_reset_email.html
@@ -1,8 +1,5 @@
-{% load i18n %}
-{% load static %}
-
-{% autoescape off %}
-Hello {{ user.get_full_name }},
+{% load i18n %}{% load static %}{% autoescape off %}
+{% trans "Dear" %} {{ user.get_full_name }},
 
 {% trans "We received a request to reset the password for your account on Substra Foundation for this email address. To initiate the password reset process for your account, click the link below." %}
 
