--- a/platform_code/templates/base-evaluation.html
+++ b/platform_code/templates/base-evaluation.html
@@ -12,9 +12,6 @@
 
     <!-- TODO: cleanup!-->
     <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
-    <link href="{% static 'js/jquery-3.5.1.min.js' %}">
-    <script defer src="{% static 'vendor/jquery/jquery.min.js' %}"></script>
-    <script defer src="{% static 'vendor/jquery/jquery.slim.min.js' %}"></script>
     <link href="{% static 'vendor/bootstrap/css/bootstrap.min.css' %}" rel="stylesheet" type="text/css">
     <link href="{% static 'vendor/bootstrap/css/bootstrap-grid.min.css' %}" rel="stylesheet" type="text/css">
     <link href="{% static 'vendor/bootstrap/css/bootstrap-reboot.min.css' %}" rel="stylesheet" type="text/css">
@@ -156,7 +153,7 @@
             <a class="fa fa-icon-footer fa-envelope" href="mailto:hello.assessment@substra.org" target="_blank"></a>
         </div>
     </footer>
-    <script defer src="{% static 'js/jquery-3.5.1.min.js' %}"></script>
+    <script src="{% static 'js/jquery-3.5.1.min.js' %}"></script>
 
 </body>
 </html>
